src/objects/Program_Enrollment__c.object
<CustomObject>
    <description>A student Contact&apos;s enrollment in an academic program offered by a Department or School (the degree-granting Account type for the educational institution).</description>
    <label>Program Enrollment</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Program Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program the student is enrolled in.</description>
        <inlineHelpText>The Program the student is enrolled in.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admission_Date__c</fullName>
        <description>The date the student was admitted to the Program.</description>
        <inlineHelpText>The date the student was admitted to the Program.</inlineHelpText>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is auto-populated with the Affiliation record that represents the student&apos;s enrollment in this Program. </description>
        <inlineHelpText>This field is auto-populated with the Affiliation record that represents the student&apos;s enrollment in this Program. </inlineHelpText>
        <label>Affiliation</label>
        <referenceTo>Affiliation__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_Date__c</fullName>
        <description>The date the student applied for admission to the Program.</description>
        <inlineHelpText>The date the student applied for admission to the Program.</inlineHelpText>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Class_Standing__c</fullName>
        <description>The student&apos;s level in a Program, for example, Freshman, Sophomore, Junior, or Senior.</description>
        <inlineHelpText>The student&apos;s level in a Program, for example, Freshman, Sophomore, Junior, or Senior.</inlineHelpText>
        <label>Class Standing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freshman</fullName>
                </value>
                <value>
                    <fullName>Sophomore</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student enrolled in this Program.</description>
        <inlineHelpText>The student enrolled in this Program.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credits_Attempted__c</fullName>
        <description>The number of credits the student has tried to complete to date. This includes credits in progress and failed courses for which no credit was received.</description>
        <inlineHelpText>The number of credits the student has tried to complete to date. This includes credits in progress and failed courses for which no credit was received.</inlineHelpText>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credits_Earned__c</fullName>
        <description>The number of credits the student has successfully completed to date.</description>
        <inlineHelpText>The number of credits the student has successfully completed to date.</inlineHelpText>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_to_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, indicates the student has met program requirements and is eligible to enroll.</description>
        <inlineHelpText>When selected, indicates the student has met program requirements and is eligible to enroll.</inlineHelpText>
        <label>Eligible to Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date the student is scheduled to complete the Program.</description>
        <inlineHelpText>The date the student is scheduled to complete the Program.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <description>The student&apos;s enrollment status, for example, full-time or half-time.</description>
        <inlineHelpText>The student&apos;s enrollment status, for example, full-time or half-time.</inlineHelpText>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Half-time</fullName>
                </value>
                <value>
                    <fullName>Less than half-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <description>The student&apos;s current grade point average.</description>
        <inlineHelpText>The student&apos;s current grade point average.</inlineHelpText>
        <label>GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <description>The year the student is expected to graduate from this Program.</description>
        <inlineHelpText>The year the student is expected to graduate from this Program.</inlineHelpText>
        <label>Class Year</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program Plan that contains all of the program requirements in effect for this student.</description>
        <inlineHelpText>The Program Plan that contains all of the program requirements in effect for this student.</inlineHelpText>
        <label>Program Plan</label>
        <referenceTo>Program_Plan__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the student started, or is expected to start, this Program.</description>
        <inlineHelpText>The date the student started, or is expected to start, this Program.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>